--- a/Css/contact.css
+++ b/Css/contact.css
@@ -31,6 +31,10 @@ body {
     text-decoration:none;
     color: rgb(100, 194, 163);
 }
+.nav a.current {
+    background-color: rgb(195, 221, 219);
+    color:rgb(100, 130, 168);
+}
 .nav img {
     float: left;
 }
